--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource/italiana": "^4.5.0",
     "@fontsource/montserrat": "^4.5.0",
     "@fontsource/poppins": "^4.5.0",
+    "formik": "^2.2.9",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
