--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@fontsource/italiana": "^4.5.0",
     "@fontsource/montserrat": "^4.5.0",
     "@fontsource/poppins": "^4.5.0",
+    "axios": "^0.21.1",
+    "firebase": "^8.7.1",
+    "firebase-admin": "^9.11.0",
     "formik": "^2.2.9",
     "next": "11.0.1",
     "react": "17.0.2",
