--- a/package.json
+++ b/package.json
@@ -13,15 +13,22 @@
     "@fontsource/montserrat": "^4.5.0",
     "@fontsource/poppins": "^4.5.0",
     "axios": "^0.21.1",
-    "firebase": "^8.7.1",
-    "firebase-admin": "^9.11.0",
+    "firebase": "^9.0.0-beta.6",
     "formik": "^2.2.9",
+    "interweave": "^12.8.0",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-click-away-listener": "^2.0.3",
+    "react-dom": "17.0.2",
+    "react-ranger": "^2.1.0",
+    "react-slick": "^0.28.1",
+    "react-swipeable": "^6.1.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "17.0.14",
+    "@types/react-ranger": "^2.0.1",
+    "@types/react-slick": "^0.23.5",
     "autoprefixer": "^10.3.1",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
