--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "axios": "^0.21.1",
     "firebase": "^9.0.0-beta.6",
     "formik": "^2.2.9",
+    "install": "^0.13.0",
     "interweave": "^12.8.0",
     "next": "11.0.1",
+    "npm": "^7.24.1",
     "react": "17.0.2",
     "react-click-away-listener": "^2.0.3",
     "react-dom": "17.0.2",
+    "react-phone-input-2": "^2.14.0",
     "react-ranger": "^2.1.0",
     "react-slick": "^0.28.1",
     "react-swipeable": "^6.1.2",
