--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/poppins": "^4.5.0",
     "@tailwindcss/forms": "^0.3.4",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.7",
     "disqus-react": "^1.1.2",
     "firebase": "^9.0.0-beta.6",
     "formik": "^2.2.9",
@@ -21,6 +22,7 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-click-away-listener": "^2.0.3",
+    "react-day-picker": "^7.4.10",
     "react-dom": "17.0.2",
     "react-ranger": "^2.1.0",
     "react-slick": "^0.28.1",
