--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@fontsource/italiana": "^4.5.0",
     "@fontsource/montserrat": "^4.5.0",
     "@fontsource/poppins": "^4.5.0",
-    "@tailwindcss/forms": "^0.3.4",
     "axios": "^0.21.1",
     "dayjs": "^1.10.7",
     "disqus-react": "^1.1.2",
@@ -24,6 +23,7 @@
     "react-click-away-listener": "^2.0.3",
     "react-day-picker": "^7.4.10",
     "react-dom": "17.0.2",
+    "react-quill": "^1.3.5",
     "react-ranger": "^2.1.0",
     "react-slick": "^0.28.1",
     "react-swipeable": "^6.1.2",
@@ -31,6 +31,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.3.4",
     "@types/react": "17.0.14",
     "@types/react-ranger": "^2.0.1",
     "@types/react-slick": "^0.23.5",
