--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-quill": "^1.3.5",
     "react-ranger": "^2.1.0",
     "react-slick": "^0.28.1",
+    "react-spring": "^9.3.3",
     "react-swipeable": "^6.1.2",
     "slick-carousel": "^1.8.1",
     "yup": "^0.32.11"
