--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "disqus-react": "^1.1.2",
     "firebase": "^9.0.0-beta.6",
     "formik": "^2.2.9",
+    "google-maps-api-loader": "^1.1.1",
+    "google-maps-react": "^2.0.6",
     "interweave": "^12.8.0",
-    "next": "11.0.1",
+    "next": "^12.0.8",
     "react": "17.0.2",
     "react-click-away-listener": "^2.0.3",
     "react-day-picker": "^7.4.10",
