--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_BASE_URL=http://137.184.148.28/
-NEXT_PUBLIC_BASE_URL2=http://96.126.110.203:4500
+NEXT_PUBLIC_BASE_URL=https://api.bodasdehoy.com/
+NEXT_PUBLIC_BASE_URL1=http://96.126.110.203:4500
