--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-click-away-listener": "^2.0.3",
     "react-day-picker": "^7.4.10",
     "react-dom": "17.0.2",
+    "react-quill": "^1.3.5",
     "react-ranger": "^2.1.0",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
