--- a/package.json
+++ b/package.json
@@ -11,14 +11,12 @@
   "dependencies": {
     "@fontsource/italiana": "^4.5.0",
     "@fontsource/montserrat": "^4.5.0",
-    "@fontsource/poppins": "^4.5.0",
-    "@next/bundle-analyzer": "^12.0.7",
+    "@fontsource/poppins": "^4.5.1",
+    "@react-google-maps/api": "^2.7.0",
     "axios": "^0.21.1",
     "disqus-react": "^1.1.2",
     "firebase": "^9.0.0-beta.6",
     "formik": "^2.2.9",
-    "google-maps-api-loader": "^1.1.1",
-    "google-maps-react": "^2.0.6",
     "interweave": "^12.8.0",
     "next": "^12.0.8",
     "react": "17.0.2",
@@ -29,6 +27,7 @@
     "react-ranger": "^2.1.0",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
+    "use-places-autocomplete": "^1.11.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
