--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fontsource/italiana": "^4.5.0",
+    "@fontsource/italiana": "^4.5.2",
     "@fontsource/montserrat": "^4.5.0",
     "@fontsource/poppins": "^4.5.1",
     "@react-google-maps/api": "^2.7.0",
@@ -26,20 +26,22 @@
     "react-quill": "^1.3.5",
     "react-ranger": "^2.1.0",
     "react-slick": "^0.28.1",
+    "react-transition-group": "^4.4.2",
     "slick-carousel": "^1.8.1",
     "use-places-autocomplete": "^1.11.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.3.4",
+    "@tailwindcss/forms": "^0.4.0",
     "@types/react": "17.0.14",
     "@types/react-ranger": "^2.0.1",
     "@types/react-slick": "^0.23.5",
-    "autoprefixer": "^10.3.1",
+    "@types/react-transition-group": "^4.4.4",
+    "autoprefixer": "^10.4.2",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.22",
     "typescript": "4.3.5"
   }
 }
