--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "formik": "^2.2.9",
     "interweave": "^12.8.0",
     "next": "^12.0.8",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-click-away-listener": "^2.0.3",
     "react-day-picker": "^7.4.10",
     "react-dom": "17.0.2",
+    "react-facebook-login": "^4.1.1",
     "react-quill": "^1.3.5",
     "react-ranger": "^2.1.0",
     "react-slick": "^0.28.1",
