--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/poppins": "^4.5.1",
     "@react-google-maps/api": "^2.7.0",
     "@tailwindcss/line-clamp": "^0.3.1",
+    "algoliasearch": "^4.13.0",
     "axios": "^0.21.1",
     "disqus-react": "^1.1.2",
     "firebase": "^9.0.0-beta.6",
@@ -24,6 +25,7 @@
     "react-click-away-listener": "^2.0.3",
     "react-day-picker": "^7.4.10",
     "react-dom": "17.0.2",
+    "react-instantsearch-dom": "^6.22.0",
     "react-quill": "^1.3.5",
     "react-ranger": "^2.1.0",
     "react-slick": "^0.28.1",
@@ -36,6 +38,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0",
     "@types/react": "17.0.14",
+    "@types/react-instantsearch-dom": "^6.12.2",
     "@types/react-ranger": "^2.0.1",
     "@types/react-slick": "^0.23.5",
     "@types/react-transition-group": "^4.4.4",
