--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^9.0.0-beta.6",
     "formik": "^2.2.9",
     "interweave": "^12.8.0",
+    "js-cookie": "^3.0.1",
     "next": "^12.0.8",
     "react": "17.0.2",
     "react-click-away-listener": "^2.0.3",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0",
+    "@types/js-cookie": "^3.0.1",
     "@types/react": "17.0.14",
     "@types/react-instantsearch-dom": "^6.12.2",
     "@types/react-ranger": "^2.0.1",
