--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@fontsource/montserrat": "^4.5.0",
     "@fontsource/poppins": "^4.5.1",
     "@react-google-maps/api": "^2.7.0",
+    "@types/js-cookie": "^3.0.1",
     "algoliasearch": "^4.13.0",
     "axios": "^0.21.1",
     "disqus-react": "^1.1.2",
     "firebase": "^9.0.0-beta.6",
     "formik": "^2.2.9",
     "interweave": "^12.8.0",
+    "js-cookie": "^3.0.1",
     "next": "^12.0.8",
     "react": "17.0.2",
     "react-click-away-listener": "^2.0.3",
