--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 5000",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -21,7 +21,6 @@
     "formik": "^2.2.9",
     "interweave": "^12.8.0",
     "js-cookie": "^3.0.1",
-    "jwt-decode": "^3.1.2",
     "next": "^12.0.8",
     "react": "^17.0.2",
     "react-click-away-listener": "^2.0.3",
