--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
+NEXT_PUBLIC_DOMINIO=.96.126.110.203
 NEXT_PUBLIC_BASE_URL=https://api.bodasdehoy.com/
 NEXT_PUBLIC_DIRECTORY=http://96.126.110.203:3000
 NEXT_PUBLIC_EVENTSAPP=http://96.126.110.203:3001
