--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
+NEXT_PUBLIC_DOMINIO=.bodasdehoy.com
 NEXT_PUBLIC_BASE_URL=https://api.bodasdehoy.com
 NEXT_PUBLIC_DIRECTORY=https://dev.bodasdehoy.com
 NEXT_PUBLIC_EVENTSAPP=https://devapp.bodasdehoy.com
