reemplazada la libreria “slider-react” por “swiper“

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-transition-group": "^4.4.2",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.4.1",
+    "swiper": "^8.3.2",
     "use-places-autocomplete": "^1.11.0",
     "yup": "^0.32.11"
   },
