--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-quill": "^1.3.5",
     "react-slick": "^0.28.1",
     "react-transition-group": "^4.4.2",
+    "sharp": "^0.30.7",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.4.1",
     "swiper": "^8.3.2",
