--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "algoliasearch": "^4.13.0",
     "axios": "^0.21.1",
     "disqus-react": "^1.1.2",
-    "firebase": "^9.0.0-beta.6",
+    "firebase": "^9.9.4",
     "formik": "^2.2.9",
     "interweave": "^12.8.0",
     "js-cookie": "^3.0.1",
