update library "caniuse-lite" and install "autoprefixer"

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/js-cookie": "^3.0.1",
     "algoliasearch": "^4.13.0",
     "axios": "^0.21.1",
+    "caniuse-lite": "^1.0.30001390",
     "disqus-react": "^1.1.2",
     "firebase": "^9.9.4",
     "formik": "^2.2.9",
@@ -44,7 +45,7 @@
     "@types/react-instantsearch-dom": "^6.12.2",
     "@types/react-slick": "^0.23.5",
     "@types/react-transition-group": "^4.4.4",
-    "autoprefixer": "^10.4.2",
+    "autoprefixer": "10.4.5",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
     "postcss": "^8.4.6",
