--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "algoliasearch": "^4.13.0",
     "axios": "^0.21.1",
     "caniuse-lite": "^1.0.30001390",
+    "date-fns": "^2.29.2",
     "disqus-react": "^1.1.2",
     "firebase": "^9.9.4",
     "formik": "^2.2.9",
@@ -25,7 +26,7 @@
     "next": "^12.0.8",
     "react": "^17.0.2",
     "react-click-away-listener": "^2.0.3",
-    "react-day-picker": "^7.4.10",
+    "react-day-picker": "^8.2.0",
     "react-dom": "17.0.2",
     "react-instantsearch-dom": "^6.22.0",
     "react-quill": "^1.3.5",
