--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "autoprefixer": "10.4.5",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
+    "next-seo": "^5.5.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.22",
     "typescript": "4.3.5"
