--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sitemap": "next-sitemap --config next-sitemap.config.js"
   },
   "dependencies": {
     "@fontsource/italiana": "^4.5.2",
@@ -24,6 +25,7 @@
     "interweave": "^12.8.0",
     "js-cookie": "^3.0.1",
     "next": "^12.0.8",
+    "next-sitemap": "^3.1.24",
     "react": "^17.0.2",
     "react-click-away-listener": "^2.0.3",
     "react-day-picker": "^8.2.0",
