--- a/.env.production
+++ b/.env.production
@@ -2,3 +2,5 @@ NEXT_PUBLIC_DOMINIO=.bodasdehoy.com
 NEXT_PUBLIC_BASE_URL=https://api.bodasdehoy.com
 NEXT_PUBLIC_DIRECTORY=https://bodasdehoy.com
 NEXT_PUBLIC_EVENTSAPP=https://organizador.bodasdehoy.com
+
+text v.0000
