--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "disqus-react": "^1.1.2",
     "firebase": "^9.10.0",
     "formik": "^2.2.9",
-    "interweave": "^12.8.0",
+    "interweave": "^13.0.0",
+    "interweave-autolink": "^5.1.0",
     "js-cookie": "^3.0.1",
     "next": "^12.0.8",
     "next-sitemap": "^3.1.24",
