--- a/.env.production
+++ b/.env.production
@@ -2,3 +2,4 @@ NEXT_PUBLIC_DOMINIO=.bodasdehoy.com
 NEXT_PUBLIC_BASE_URL=https://api.bodasdehoy.com
 NEXT_PUBLIC_DIRECTORY=https://bodasdehoy.com
 NEXT_PUBLIC_EVENTSAPP=https://organizador.bodasdehoy.com
+NEXT_PUBLIC_API_KEY_CONSOLE_GOOGLE=AIzaSyCoJEB_9ZqtDCqfe-GZ0v1pq81eA3e4qI4
