--- a/.env.production
+++ b/.env.production
@@ -2,6 +2,5 @@ NEXT_PUBLIC_DOMINIO=.bodasdehoy.com
 NEXT_PUBLIC_BASE_URL=https://api.bodasdehoy.com
 NEXT_PUBLIC_DIRECTORY=https://bodasdehoy.com
 NEXT_PUBLIC_EVENTSAPP=https://organizador.bodasdehoy.com
-NEXT_PUBLIC_CMS=https://cms.bodasdehoy.com/?d=busines
-NEXT_PUBLIC_VEWCMS=http://192.168.1.4:3002/?d=vewBusines
+NEXT_PUBLIC_CMS=https://cms.bodasdehoy.com
 NEXT_PUBLIC_API_KEY_CONSOLE_GOOGLE=AIzaSyCoJEB_9ZqtDCqfe-GZ0v1pq81eA3e4qI4
