--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-click-away-listener": "^2.0.3",
     "react-day-picker": "^8.2.0",
     "react-dom": "17.0.2",
+    "react-icons": "^4.11.0",
     "react-instantsearch-dom": "^6.22.0",
     "react-quill": "^1.3.5",
     "react-slick": "^0.28.1",
