--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/montserrat": "^4.5.0",
     "@fontsource/poppins": "^4.5.1",
     "@react-google-maps/api": "^2.7.0",
+    "@types/google-libphonenumber": "^7.4.30",
     "@types/js-cookie": "^3.0.1",
     "algoliasearch": "^4.13.0",
     "axios": "^0.21.1",
@@ -24,6 +25,7 @@
     "disqus-react": "^1.1.2",
     "firebase": "^9.10.0",
     "formik": "^2.2.9",
+    "google-libphonenumber": "^3.2.33",
     "interweave": "^12.8.0",
     "js-cookie": "^3.0.1",
     "next": "^12.0.8",
