--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "google-libphonenumber": "^3.2.33",
     "interweave": "^12.8.0",
     "js-cookie": "^3.0.1",
+    "nanoid": "^5.0.3",
     "next": "^12.0.8",
     "next-sitemap": "^3.1.24",
     "react": "^17.0.2",
