--- a/.env.production
+++ b/.env.production
@@ -5,3 +5,4 @@ NEXT_PUBLIC_EVENTSAPP=https://organizador.bodasdehoy.com
 NEXT_PUBLIC_CMS=https://cms.bodasdehoy.com
 NEXT_PUBLIC_CUSTOMWEB=https://web.bodasdehoy.com/
 NEXT_PUBLIC_API_KEY_CONSOLE_GOOGLE=AIzaSyCoJEB_9ZqtDCqfe-GZ0v1pq81eA3e4qI4
+NEXT_PUBLIC_ID_ANALYTICS=G-0ZMG9W5K1G
