--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "next-seo": "^5.5.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.22",
-    "typescript": "4.3.5"
+    "typescript": "4.3.5",
+    "user-agent-data-types": "^0.4.2"
   }
 }
